sample/asm/errors/backward_out_of_function_jump.asm
.function: main/0
    jump -2
    izero 0
    return
.end
